17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/dwi2tensor.cpp: improved support for images that might use a different dimension for the DWI

17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/image.cpp: added preliminary support to read Philips DW information

17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/app.cpp: fix bug in command-line parsing (fix supplied by Tom Close)
    
11-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/dwi/SH.cpp: fix bug in computation of second derivative of SH series (pointed out by Ben Jeurissen).
    
09-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/csa_entry.h:
    * lib/file/dicom/element.cpp:
      include <cstdio> to allow compilation on Fedora 11


=======================================================================
VERSION 0.2.7
=======================================================================

24-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/dwi/tensor.h: use sqrt(1.5) instead of sqrt(3/2) when computing the
    FA. This was rounded down to 1 since the compiler assumed integer
    arithmetic (thanks to Kerstin Pannek for pointing this out).

16-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/resample_tracks.cpp: Improved the track resampling routine to allow for curved tracks.

13-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/gen_unit_warp.cpp: Added command to generate unitary warp. This is
    intended for use with other normalisation programs. The unitary warp field
    generated by this program can be warped by a third party normalisation
    routine, so that the relevant warp field can be recovered in the right
    format for use with MRtrix.

    * cmd/gen_ROI.cpp:
    * cmd/resample_tracks.cpp:
    * cmd/sample_tracks.cpp: Added a few programs to perform track-specific analyses

23-07-2009 J-Donald Tournier <d.tournier@brain.org.au>